テンプレからコピー

--- a/src/about.html
+++ b/src/about.html
@@ -1,14 +1,7 @@
-
 <!DOCTYPE html>
 <html lang="ja">
-    
-    <head>
-    <!-- =========================================================================== -->
-    <!-- =========================================================================== -->
-    <!-- 後で削除 -->
-    <!-- =========================================================================== -->
-    <!-- =========================================================================== -->
-    <meta name="robots" content="noindex">
+
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -17,30 +10,30 @@
     <link rel="stylesheet" href="asset/css/common.css">
     <link rel="stylesheet" href="asset/css/header.css">
     <link rel="stylesheet" href="asset/css/footer.css">
-    <link rel="stylesheet" href="asset/css/index.css">
-    <link rel="canonical" href="https://www.taiseireinetsu.jp">
-    <meta name="keywords" content="株式会社aaaaaaaa,東京都八王子市,首都圏,空調,解体,設置,保守">
+    <link rel="stylesheet" href="asset/css/about.css">
+    <link rel="canonical" href="https://www.iai-amami.com.jp/about">
+    <meta name="keywords" content="I あい,東京都八王子市,首都圏,空調,解体,設置,保守">
     <meta name="description"
-        content="株式会社aaaaaaaaのホームページです。私たちは東京都八王子市を本拠地に、空調設備等の設置・解体を行う企業です。まだ若い企業ではありますが、行動力と柔軟性を活かして事業を行なっています。">
-    <title>株式会社aaaaaaaa</title>
-    <meta property="og:site_name" content="株式会社aaaaaaaa">
-    <meta property="og:image" content="https://taiseireinetsu.jp/asset/img/OGP.png">
+        content="I あいのホームページです。私たちは東京都八王子市を本拠地に、空調設備等の設置・解体を行う企業です。まだ若い企業ではありますが、行動力と柔軟性を活かして事業を行なっています。">
+    <title>会社案内｜I あい</title>
+    <meta property="og:site_name" content="I あい">
+    <meta property="og:image" content="https://iai-amami.com.jp/asset/img/OGP.png">
     <meta name="format-detection" content="telephone=no">
-    <meta property="og:title" content="株式会社aaaaaaaa">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://taiseireinetsu.jp">
+    <meta property="og:title" content="会社案内｜I あい">
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://iai-amami.com.jp">
     <meta property="og:description"
-        content="株式会社aaaaaaaaのホームページです。私たちは東京都八王子市を本拠地に、空調設備等の設置・解体を行う企業です。まだ若い企業ではありますが、行動力と柔軟性を活かして事業を行なっています。">
+        content="I あいのホームページです。私たちは東京都八王子市を本拠地に、空調設備等の設置・解体を行う企業です。まだ若い企業ではありますが、行動力と柔軟性を活かして事業を行なっています。">
     <link rel="icon" href="/asset/img/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="/asset/img/apple-touch-icon-180x180.png">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-TWMEVJ6Z90"></script>
     <script>
-        // window.dataLayer = window.dataLayer || [];
-        // function gtag() { dataLayer.push(arguments); }
-        // gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-        // gtag('config', 'G-TWMEVJ6Z90');
+        gtag('config', 'G-TWMEVJ6Z90');
     </script>
 </head>
 
@@ -50,7 +43,7 @@
             <div class="inner">
                 <a class="logo_link" href="/">
                     <img class="logo_img" src="/asset/img/logo.png" alt="header_logo">
-                    <h1 class="company_name">aaaaaaaa</h1>
+                    <h1 class="company_name">I あい</h1>
                 </a>
                 <div class="nav">
                     <div class="border"></div>
@@ -80,7 +73,7 @@
                     <a href="https://www.instagram.com/taisei_reinetu/" class="insta_link">
                         <img src="/asset/img/insta.png" alt="insta" class="insta">
                     </a>
-                    <a href="https://form.run/@taiseireinetsu" class="mail_link">
+                    <a href="https://form.run/@iai-amami.com" class="mail_link">
                         <img src="/asset/img/mailicon01.png" alt="mail" class="mail">
                     </a>
                 </div>
@@ -112,7 +105,7 @@
                     </a>
                 </div class="li">
                 <div class="li">
-                    <a class="link" href="https://form.run/@taiseireinetsu">
+                    <a class="link" href="https://form.run/@iai-amami.com">
                         <p class="title">コンタクト</p>
                         <p class="title_sub">CONTACT</p>
                     </a>
@@ -122,74 +115,85 @@
     </header>
 
     <main>
-        <div class="top_flex">
-            <div class="top_wrap">
-                <div class="textarea">
-                    <h1 class="reveal-text"> Passionate heart, <br class="br">Cool working </h1>
-                    <p class="reveal-text reveal-text_2">ハートは熱く仕事はクールに</p>
-                </div>
-                <div class="scroll">
-                    <p class="scroll_text">SCROLL</p>
-                    <div class="vector">
-                        <div class="line line_0">
-                        </div>
-                        <div class="line line_1">
+        <div class="top_wrap">
+            <div class="textarea">
+                <h1 class="reveal-text"> 会社案内 </h1>
+                <p class="reveal-text reveal-text_2"> About </p>
+            </div>
+        </div>
+        <div class="greeting">
+            <div class="inner">
+                <h2 class="h2">代表挨拶</h2>
+                <p class="h2_eng">GREETING</p>
+                <div class="flex">
+                    <div class="left">
+                        <img src="./asset/img/S__5939225.jpg" alt="greeting_img" class="img">
+                    </div>
+                    <div class="right">
+                        <div class="textarea">
+                            <p class="text"> I あいは令和4年に設立をし、関東エリアを中心としたショッピングモール、病院、工場などの空調、ダクト工事を行ってまいりました。 <br>
+                                <br> 安心安全を第一に、高い技術力の 向上と豊富な設備をもって、ここ数年にわたり数々のご依頼を頂きました。 <br>
+                                <br> この実績により築いた信用信頼を裏切ることなくこれからもますますのご期待を添えるよう 従業員、組織として日々成長をし続けてまいる所存です。 <br>
+                                <br> 今後ともより一層ご支援ご鞭撻を頂けますよう社員一同宜しくお願い申し上げます。
+                            </p>
+                            <p class="ceo"> I あい 代表取締役　近藤 郁子</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="section about">
+        <div class="about">
             <div class="inner">
-                <img src="./asset/img/S__5947422.jpg" alt="img" class="img" />
-                <div class="textarea">
+                <div class="white">
                     <div class="h2_div">
-                        <h2 class="h2">会社案内 </h2>
-                        <p class="h2_eng">COMPANY </p>
+                        <h2 class="h2">会社概要</h2>
+                        <p class="h2_eng">ABOUT</p>
                     </div>
-                    <p class="p"> 私たちは東京都八王子市を本拠地に、空調設備等の設置・解体を行う企業です。 <br>
-                        <br> 関東県内を中心に活動していますが、九州など遠方へ工事に伺うこともあります。 <br>
-                        <br> まだ若い企業ではありますが、行動力と柔軟性を活かして事業を行なっています。
-                    </p>
-                    <a href="/about" class="button_link">
-                        <div class="button">
-                            <p class="button_p">VIEW MORE </p>
-                            <div class="vector">
-                                <div class="line line_0">
-                                </div>
-                                <div class="line line_1">
-                                </div>
+                    <div class="list">
+                        <div class="row">
+                            <p class="title">社名</p>
+                            <p class="text">I あい</p>
+                        </div>
+                        <div class="row">
+                            <p class="title">住所</p>
+                            <p class="text">鹿児島県奄美市名瀬久里町19-3</p>
+                        </div>
+                        <div class="row">
+                            <p class="title">資本金</p>
+                            <p class="text">300万円</p>
+                        </div>
+                        <div class="row">
+                            <p class="title">TEL</p>
+                            <div class="link_div">
+                                <a href="tel:000-000-0000" class="link">
+                                    <p class="text">000-000-0000（固定/FAX）</p>
+                                </a>
+                                <a href="tel:000-000-0000" class="link">
+                                    <p class="text">000-000-0000（携帯）</p>
+                                </a>
                             </div>
                         </div>
-                    </a>
+                        <div class="row">
+                            <p class="title">代表取締役</p>
+                            <p class="text">近藤 郁子</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="section company">
+        <div class="insta_section">
             <div class="inner">
-                <img src="./asset/img/S__3219484.jpeg" alt="img" class="img" />
                 <div class="textarea">
-                    <div class="h2_div">
-                        <h2 class="h2">事業案内 </h2>
-                        <p class="h2_eng">BUSINESS </p>
-                    </div>
-                    <p class="p"> aaaaaaaaでは、<br>
-                        <br> 1. 工場、ビルや商業施設への空調機器の据え付けを行う設置・敷設業務<br> 2. 既存の空調機器の保守・メンテナンス業務<br> 3.
-                        建物の取り壊し等に伴う空調機器の解体・撤去業務<br>
-                        <br> など、空調機器に関する様々な業務でお客様のお悩み解決をサポートいたします。<br>
-                        <br> 上記に記載がないことでも、問題解決のため前向きに考えさせていただきますので、是非一度ご連絡ください。
+                    <h2 class="h2">インスタグラム</h2>
+                    <p class="h2_eng">INSTAGRAM</p>
+                    <p class="text"> I あい代表 近藤 郁子のインスタグラムです。<br>
+                        <br> 私事が多いですが、仕事に関することも発信しています。興味があればご覧いただけると幸いです。<br>
+                        <br> 仕事についての発信では、依頼主様に許可していただいたものから一部を記載させていただいています。<br>
+                        <br> 皆様にI あいの事業がわかるような、現場での出来事や簡単な施工事例となるような写真を多く撮影できるよう心がけています。<br>
                     </p>
-                    <a href="/business" class="button_link">
-                        <div class="button">
-                            <p class="button_p">VIEW MORE </p>
-                            <div class="vector">
-                                <div class="line line_0">
-                                </div>
-                                <div class="line line_1">
-                                </div>
-                            </div>
-                        </div>
-                    </a>
+                </div>
+                <div class="instagram">
+                    インスタグラム埋め込み
                 </div>
             </div>
         </div>
@@ -201,14 +205,14 @@
                 <div class="inner">
                     <a class="logo_link" href="/">
                         <img class="logo_img" src="/asset/img/logo.png" alt="header_logo">
-                        <h1 class="company_name">aaaaaaaa</h1>
+                        <h1 class="company_name">I あい</h1>
                     </a>
-                    <p class="address"> 八王子市大和田町7-17-59 </p>
-                    <a href="tel:042-657-5236" class="tel">
-                        <p class="tel"> TEL/FAX. 042-657-5236 </p>
+                    <p class="address"> 鹿児島県奄美市名瀬久里町19-3 </p>
+                    <a href="tel:000-000-0000" class="tel">
+                        <p class="tel"> TEL/FAX. 000-000-0000 </p>
                     </a>
-                    <a href="tel:080-5479-1177" class="tel">
-                        <p class="tel"> 携帯TEL. 080-5479-1177 </p>
+                    <a href="tel:000-000-0000" class="tel">
+                        <p class="tel"> 携帯TEL. 000-000-0000 </p>
                     </a>
                     <div class="nav">
                         <div class="border"></div>
@@ -237,7 +241,7 @@
                             <a href="https://www.instagram.com/taisei_reinetu/" class="insta_link">
                                 <img src="/asset/img/insta.png" alt="insta" class="footer_insta_icon">
                             </a>
-                            <a href="https://form.run/@taiseireinetsu" class="mail_link">
+                            <a href="https://form.run/@iai-amami.com" class="mail_link">
                                 <img src="/asset/img/mailicon01.png" alt="mail" class="mail">
                             </a>
                         </div>
@@ -249,7 +253,7 @@
                             <div class="line line_2"></div>
                         </div>
                     </a>
-                    <p class="copyright_text">©︎2022　aaaaaaaa</p>
+                    <p class="copyright_text">©︎2022　I あい</p>
                 </div>
             </div>
         </div>
